start to add user data to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <h1>INTERNAL COMPANY DIRECTORY</h1>
   <div class="customers">
     <!-- Put Your Customers In Here -->
+    <span id="pictures"></span>
+    <span id="name"></span>
+    <span id="email"></span>
+    <span id="location"></span>
+    <span id="phone"></span>
   </div>
   <script src="main.js"></script>
 </body>
