--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 </head>
 <body>
   <h1>INTERNAL COMPANY DIRECTORY</h1>
-  <div class="customers">
-    <!-- Put Your Customers In Here -->
-    <span id="pictures"></span>
-    <span id="name"></span>
-    <span id="email"></span>
-    <span id="location"></span>
-    <span id="phone"></span>
+  <div id="custdata">
+    <div class="customers">
+      <!-- Put Your Customers In Here -->
+
+    </div>
   </div>
   <script src="main.js"></script>
 </body>
